<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical"
    tools:context=".PokemonDetailsFragment">

    <TextView
        android:id="@+id/pokemon_nameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/pokemon_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_below="@+id/pokemon_nameTV"
        android:id="@+id/card_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/attributes_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:background="@drawable/ic_cardview_background"
            android:elevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="499dp"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="32dp">

                <TextView
                    android:id="@+id/pokemon_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/black"
                    android:text="@string/height"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/pokemon_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/pokemon_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/type_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    tools:listitem="@layout/chip_items" />

                <TextView
                    android:id="@+id/pokemon_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/black"
                    android:text="@string/stats"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/stat_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    tools:listitem="@layout/chip_items" />

                <TextView
                    android:id="@+id/pokemon_abilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/black"
                    android:text="@string/abilities"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/abilities_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    tools:listitem="@layout/chip_items" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/pokemon_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignTop="@+id/attributes_card_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-100dp"
            />

    </RelativeLayout>


</RelativeLayout>